--- a/index.html
+++ b/index.html
@@ -53,6 +53,12 @@
     <div id="search" class="full magnet-section seven1">
         <h1>Search</h1>
     </div>
+    <div class="full magnet-section scroll">
+        <h1>Scroll<br>Scroll<br>Scroll<br>Scroll<br>Scroll<br>Scroll<br>Scroll<br>Scroll<br>Scroll<br>Scroll<br>Scroll<br>Scroll<br>Scroll<br>Scroll<br>Scroll<br>Scroll<br>Scroll<br>Scroll<br>Scroll<br>Scroll<br>Scroll<br>Scroll<br></h1>
+    </div>
+    <div class="full magnet-section seven">
+        <h2>Desafio que o campo representa para o designer</h2>
+    </div>
   </div>
   
   
