--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     <div id="search" class="full magnet-section seven1">
         <h1>Search</h1>
     </div>
-    <div class="full magnet-section scroll" data-section-name="scroll">
+    <div class="full scroll" data-section-name="scroll">
         <h1>Scroll<br>Scroll<br>Scroll<br>Scroll<br>Scroll<br>Scroll<br>Scroll<br>Scroll<br>Scroll<br>Scroll<br>Scroll<br>Scroll<br>Scroll<br>Scroll<br>Scroll<br>Scroll<br>Scroll<br>Scroll<br>Scroll<br>Scroll<br>Scroll<br>Scroll<br></h1>
     </div>
     <div class="full magnet-section seven">
