--- a/index.html
+++ b/index.html
@@ -57,10 +57,8 @@
         <h1>Scroll<br>Scroll<br>Scroll<br>Scroll<br>Scroll<br>Scroll<br>Scroll<br>Scroll<br>Scroll<br>Scroll<br>Scroll<br>Scroll<br>Scroll<br>Scroll<br>Scroll<br>Scroll<br>Scroll<br>Scroll<br>Scroll<br>Scroll<br>Scroll<br>Scroll<br></h1>
     </div>
     <div class="full magnet-section seven">
-        <h2>Desafio que o campo representa para o designer</h2>
-    </div>
-    <div class="full magnet-section three">
-        <iframe src="http://www.evolutionoftheweb.com/?hl=pt-br" style="border:none;width:100%"></iframe>
+        <!-- <h2>Desafio que o campo representa para o designer</h2> -->
+    	<iframe src="http://www.evolutionoftheweb.com/?hl=pt-br" style="border:none;width:100%"></iframe>
     </div>
   </div>
   
