--- a/index.html
+++ b/index.html
@@ -17,8 +17,62 @@
 
 <body>
   <div class="row">
-    <div class="full magnet-section one">
-        <h2><a href="#"><u>Hipertexto</u></a> e Websites</h2>
+    <div class="full magnet-section title">
+        <h2>Hipertexto e Websites</h2>
+    </div>
+    <div class="full magnet-section miya">
+        <h2><a href="#"><u>Hipertexto</u></a></h2>
+    </div>
+    <div class="magnet-section carac miya">
+      <div class="topic">
+        <h3>Hipertexto</h3>
+        <h2>Características</h2>
+      </div>
+      <div class="content full row">
+        <div class="col-md-4"><h1>Texto</h1></div>
+        <div class="col-md-2"></div>
+        <div class="col-md-5"><h1>Conjuntos de informações</h1></div>
+        <div class="col-md-1"></div>
+
+        <div class="col-md-3"></div>
+        <div class="col-md-6"><h1><u>Destaques no corpo do texto</u></h1></div>
+        <div class="col-md-3"></div>
+
+        <div class="col-md-4"><h1>Introdução ao assunto</h1></div>
+        <div class="col-md-3"></div>
+        <div class="col-md-5"><h1>Extensão para informação mais específica</h1></div>
+
+        <div class="col-md-3"></div>
+        <div class="col-md-6"><h1>Facilita a navegação do usuário</h1></div>
+        <div class="col-md-3"></div>
+      </div>
+    </div>
+    <div class="magnet-section aspec miya">
+      <div class="topic">
+        <h3>Hipertexto e Websites</h3>
+        <h2>Aspectos técnicos</h2>
+      </div>
+      <div class="content full row">
+        <div class="col-md-4"><h1>WWW</h1></div>
+        <div class="col-md-2"></div>
+        <div class="col-md-5"><h1>HTML</h1></div>
+        <div class="col-md-1"></div>
+
+        <div class="col-md-3"></div>
+        <div class="col-md-6"><h1>Salvas no servidor</h1></div>
+        <div class="col-md-3"></div>
+
+        <div class="col-md-4"><h1>1 click</h1></div>
+        <div class="col-md-3"></div>
+        <div class="col-md-5"><h1>Funcionamento</h1></div>
+
+        <div class="col-md-3"></div>
+        <div class="col-md-6"><h1>Resultado</h1></div>
+        <div class="col-md-3"></div>
+      </div>
+    </div>
+    <div class="full magnet-section miya">
+        <h2><a href="#"><u>Hipertexto</h2>
     </div>
     <div class="full magnet-section two">
       <div class="col-md-6">
@@ -55,10 +109,6 @@
     </div>
     <div class="full magnet-section scroll" data-section-name="scroll">
         <h1>Scroll<br>Scroll<br>Scroll<br>Scroll<br>Scroll<br>Scroll<br>Scroll<br>Scroll<br>Scroll<br>Scroll<br>Scroll<br>Scroll<br>Scroll<br>Scroll<br>Scroll<br>Scroll<br>Scroll<br>Scroll<br>Scroll<br>Scroll<br>Scroll<br>Scroll<br></h1>
-    </div>
-    <div class="full magnet-section seven">
-        <!-- <h2>Desafio que o campo representa para o designer</h2> -->
-    	<iframe src="https://www.evolutionoftheweb.com/?hl=pt-br" style="border:none;width:100%"></iframe>
     </div>
   </div>
   
