--- a/index.html
+++ b/index.html
@@ -18,18 +18,20 @@
 <body>
   <div class="row">
     <div class="full magnet-section title">
-        <h2>Hipertexto e Websites</h2>
+        <h2 class="title8bits">Hipertexto e Websites</h2>
     </div>
     <div class="full magnet-section miya">
-        <h2><a href="#"><u>Hipertexto</u></a></h2>
+        <h2 class="title8bits"><a href="#"><u>Hipertexto</u></a></h2>
     </div>
     <div class="magnet-section carac miya">
       <div class="topic">
         <h3>Hipertexto</h3>
-        <h2>Características</h2>
+        <h2 class="title8bits">Características</h2>
       </div>
-      <div class="content full row">
-        <div class="col-md-4"><h1>Texto</h1></div>
+      <div class="content full row relative">
+        <img src="images/g1.png">
+        <img src="images/g1_zoom.png">
+        <!-- <div class="col-md-4"><h1>Texto</h1></div>
         <div class="col-md-2"></div>
         <div class="col-md-5"><h1>Conjuntos de informações</h1></div>
         <div class="col-md-1"></div>
@@ -44,7 +46,7 @@
 
         <div class="col-md-3"></div>
         <div class="col-md-6"><h1>Facilita a navegação do usuário</h1></div>
-        <div class="col-md-3"></div>
+        <div class="col-md-3"></div> -->
       </div>
     </div>
     <div class="magnet-section aspec miya">
