--- a/index.html
+++ b/index.html
@@ -55,13 +55,23 @@
         <h2>Aspectos técnicos</h2>
       </div>
       <div class="content full row">
-        <div class="col-md-4"><h1>WWW</h1></div>
-        <div class="col-md-2"></div>
-        <div class="col-md-5"><h1>HTML</h1></div>
-        <div class="col-md-1"></div>
+        <div class="col-md-6">
+          <div class="input-group">
+            <input type="text" class="form-control" value="World Wide Web">
+          </div>
+        </div>
+        <div class="col-md-6 html-background">
+        </div>
+        <!-- <div class="col-md-5"><h1>HTML</h1></div>
+        <div class="col-md-1"></div> -->
 
-        <div class="col-md-3"></div>
-        <div class="col-md-6"><h1>Salvas no servidor</h1></div>
+        <div class="col-md-6 fluxo-html">
+          <img src="images/1.png">
+          <img src="images/2.png">
+          <img src="images/3.png">
+          <img src="images/4.png">
+        </div>
+        <!-- <div class="col-md-6"><h1>Salvas no servidor</h1></div>
         <div class="col-md-3"></div>
 
         <div class="col-md-4"><h1>1 click</h1></div>
@@ -70,20 +80,44 @@
 
         <div class="col-md-3"></div>
         <div class="col-md-6"><h1>Resultado</h1></div>
-        <div class="col-md-3"></div>
+        <div class="col-md-3"></div> -->
       </div>
     </div>
-    <div class="full magnet-section miya">
-        <h2><a href="#"><u>Hipertexto</h2>
-    </div>
-    <div class="full magnet-section two">
-      <div class="col-md-6">
-        <img class="jobs" src="images/jobs.png">
-      </div>
-      <div class="col-md-6">
-        <h2>Como surgiu</h2>
+
+    <div class="magnet-section two isa">
+      <div class="topic">
+        <h3>Hipertexto e Websites</h3>
+        <h2>Quando e por quem foi inventada</h2>
       </div>
     </div>
+
+    <div class="full magnet-section three greg title">
+      <h2 class="title8bits">A EVOLUÇÃO DA WEB <br><a target="_blank" href="http://www.evolutionoftheweb.com/">http://www.evolutionoftheweb.com/
+</a></h2>
+    </div>
+    <div class="full magnet-section three greg title">
+      <h2 class="title8bits">BUSCADORES</h2>
+    </div>
+    <div class="magnet-section three greg buscadores">
+      <img src="images/cade.png">
+    </div>
+    <div class="magnet-section three greg buscadores">
+      <img src="images/google.png">
+    </div>
+    <div class="full magnet-section three greg title search-area">
+      <h2>
+        <span id="text"></span>
+        <input id="input" type="text">
+        <a class="button btn" id="button" href="#search">Pesquisar</a>
+        <a class="button btn" id="button" href="#search">Estou com sorte</a>
+      </h2>
+    </div>
+
+
+    <div class="full magnet-section four jonh title">
+      <h2 class="title8bits">A MUDANÇA DA ESTÉTICA DOS GRANDES SITES</h2>
+    </div>
+
     <div class="full magnet-section three">
         <h2>No que se transformou</h2>
     </div>
@@ -91,11 +125,11 @@
         <h2>O que é hoje</h2>
     </div> -->
     <div class="full magnet-section four">
-        <h2>
+        <!-- <h2>
           <span id="text"></span>
           <input id="input" type="text">
           <a class="button btn btn-primary" id="button" href="#search">Procurar</a>
-        </h2>
+        </h2> -->
     </div>
     <div class="full magnet-section five">
         <h2>Designers que são referência hoje</h2>
