--- a/index.html
+++ b/index.html
@@ -12,6 +12,9 @@
   		background-color: #000;
   	}
   </style>
+
+  <link href='https://fonts.googleapis.com/css?family=Orbitron:900' rel='stylesheet' type='text/css'>
+  <link rel="stylesheet" href="resist/css/style.css">
   
 </head>
 
@@ -52,7 +55,7 @@
     <div class="magnet-section aspec miya">
       <div class="topic">
         <h3>Hipertexto e Websites</h3>
-        <h2>Aspectos técnicos</h2>
+        <!-- <h2>Aspectos técnicos</h2> -->
       </div>
       <div class="content full row">
         <div class="col-md-6">
@@ -84,52 +87,173 @@
       </div>
     </div>
 
-    <div class="magnet-section two isa">
+
+    <div class="magnet-section two isa image24">
       <div class="topic">
-        <h3>Hipertexto e Websites</h3>
-        <h2>Quando e por quem foi inventada</h2>
+        <h3>Primeiras manifestações: séc. XVI e XVII</h3><br>
+        <h2><p>Leitura não-linear</p></h2><br>
+        <h2><p>Forma não-sequencial</p></h2>
       </div>
     </div>
+    <div class="magnet-section two isa image20">
+      <div class="topic">
+        <h3>1945 - Vannevar Bush - “Memex” (memory + index)</h3>
+        <h2>1º a pensar no uso de hipertexto para resolver problemas de armazenamento de informações.</h2>
+      </div>
+    </div>
+    <div class="magnet-section two isa image13">
+      <div class="topic">
+        <h3>1960 - Ted Nelson -  Xanadu</h3><br>
+        <h2><p>Uso do termo “hiperlink”</p></h2><br>
+        <h2><p>Ambiente literário de escala global</p></h2><br>
+        <h2><p>Novos processos de registro, transporte e distribuição</p></h2><br>
+        <h2><p>Conexões baseadas no princípio do hipertexto universal</p></h2>
+      </div>
+    </div>
+    <div class="magnet-section two isa image14">
+      <div class="topic">
+        <h3>World Wide Web</h3><br>
+        <h2><p>UARPANET (anos 60)</p></h2><br>
+        <h2><p>Rede entre computadores com informações sigilosas do governo</p></h2><br>
+      </div>
+    </div>
+    <div class="magnet-section two isa image18">
+      <div class="topic">
+        <h3>WWW</h3><br>
+        <h2><p>1990, Tim Berners-Lee</p></h2><br>
+        <h2><p>- “link”</p></h2><br>
+        <h2><p>- Navegador</p></h2><br>
+        <h2><p>- Servidor e as primeiras páginas Web</p></h2><br>
+        <h2><p class="subtitle">computador que foi utilizado como servidor-web (NeXTcube)</p></h2><br>
+      </div>
+    </div>
+    <div class="full magnet-section two isa tela-gif">
+        <h2 class="title8bits">Tela HTML 1993</h2>
+    </div>
+
 
     <div class="full magnet-section three greg title">
-      <h2 class="title8bits">A EVOLUÇÃO DA WEB <br><a target="_blank" href="http://www.evolutionoftheweb.com/">http://www.evolutionoftheweb.com/
-</a></h2>
+      <h2 class="title8bits">A EVOLUÇÃO DA WEB <br>
+        <a target="_blank" href="http://www.evolutionoftheweb.com/">http://www.evolutionoftheweb.com/
+        </a>
+      </h2>
     </div>
     <div class="full magnet-section three greg title">
       <h2 class="title8bits">BUSCADORES</h2>
     </div>
-    <div class="magnet-section three greg buscadores">
+    <div class="magnet-section three greg img-full">
       <img src="images/cade.png">
     </div>
-    <div class="magnet-section three greg buscadores">
+    <div class="magnet-section three greg img-full">
       <img src="images/google.png">
     </div>
     <div class="full magnet-section three greg title search-area">
       <h2>
-        <span id="text"></span>
+        <span id="text">&nbsp;</span>
         <input id="input" type="text">
-        <a class="button btn" id="button" href="#search">Pesquisar</a>
-        <a class="button btn" id="button" href="#search">Estou com sorte</a>
+        <a class="button btn" id="button" href="#jonh">Pesquisar</a>
+        <a class="button btn" id="button" href="#jonh">Estou com sorte</a>
       </h2>
     </div>
 
 
-    <div class="full magnet-section four jonh title">
+    <div id="jonh" class="full magnet-section four jonh title">
       <h2 class="title8bits">A MUDANÇA DA ESTÉTICA DOS GRANDES SITES</h2>
     </div>
-
-    <div class="full magnet-section three">
-        <h2>No que se transformou</h2>
+    <div class="magnet-section four jonh img-full">
+      <img src="images/apple.png">
     </div>
+    <div class="magnet-section four jonh img-full">
+      <img src="images/apple_new.png">
+    </div>
+    <div class="magnet-section four jonh img-full">
+      <img src="images/google.png">
+    </div>
+    <div class="magnet-section four jonh img-full">
+      <img src="images/google_new.png">
+    </div>
+    <div class="magnet-section four jonh img-full amazon">
+      <img src="images/amazon.jpg">
+    </div>
+    <div class="magnet-section four jonh img-full">
+      <img src="images/amazon_new.png">
+    </div>
+    <div class="magnet-section four jonh img-full mercedes">
+      <img src="images/mercedes.png">
+    </div>
+    <div class="magnet-section four jonh img-full mercedes_new">
+      <img src="images/mercedes_new.png">
+    </div>
+    <div class="full magnet-section four jonh title">
+      <h2 class="title8bits">DESCUBRA VOCÊ MESMO <br><a target="_blank" href="http://www.web.archive.org/">http://www.web.archive.org/</a></h2>
+    </div>
+
+
+    <div class="full magnet-section five pati title glitch-background">
+      <h2 class="title8bits"><p>NET.ART</p> <br><p class="little">ARTE NA REDE</p></h2>
+    </div>
+    <div class="magnet-section five pati vuc">
+      <div class="text-block-vuc">
+        <h2>VUC COSIC</h2><br><br>
+        <h4>PIONEIRO - 1997</h4><br>
+        <h4><a href="http://www.ljudmila.org/~vuk/">http://www.ljudmila.org/~vuk/</a></h4>
+      </div>
+    </div>
+    <div class="magnet-section five heart pati">
+      <div class="text-block">
+        <h2>PORPENTINE CHARITY HEARTSCAPE</h2><br><br><br>
+        <h4>"Miniskirt World Network: Business Slut Online" 2017
+          <a href="http://slimedaughter.com">http://slimedaughter.com</a>
+        </h4>
+      </div>
+    </div>
+    <div class="magnet-section five lands pati">
+      <div class="text-block">
+        <h2>CELSO REEKS E THIAGO BOUD'HORS</h2><br><br><br>
+        <h4>"Lands Beyond" 1997
+          <a href="http://www.distopia.com/LandsBeyond/">http://www.distopia.com/LandsBeyond/</a>
+        </h4>
+      </div>
+    </div>
+    <div class="full magnet-section five pati title threads">
+      <h2>ANDREI THOMAZ<br><br>
+        <p>"QUANTAS LINHA SÃO NECESSÁRIAS…." - 2004</p>
+        <a href="http://www.andreithomaz.com">http://www.andreithomaz.com</a>
+      </h2>
+    </div>
+
+
+    <div class="full magnet-section six hector title professor">
+      <h2 class="title8bits">Elemento x</h2>
+    </div>
+    <div class="full magnet-section six hector title vr">
+      <h2 class="title8bits">Ambiente mixado</h2>
+    </div>
+    <div class="full magnet-section six hector title retrato">
+      <h2 class="title8bits">Estreitamento da relação homem-máquina</h2>
+    </div>
+
+
+
+    <div class="magnet-section seven title thanks">
+      <iframe src="resist/index.html"></iframe>
+      <img src="images/qr.jpg">
+    </div>
+
+
+
+    <!-- <div class="full magnet-section three">
+        <h2>No que se transformou</h2>
+    </div> -->
     <!-- <div class="full magnet-section four">
         <h2>O que é hoje</h2>
     </div> -->
-    <div class="full magnet-section four">
-        <!-- <h2>
+    <!-- <div class="full magnet-section four">
+        <h2>
           <span id="text"></span>
           <input id="input" type="text">
           <a class="button btn btn-primary" id="button" href="#search">Procurar</a>
-        </h2> -->
+        </h2>
     </div>
     <div class="full magnet-section five">
         <h2>Designers que são referência hoje</h2>
@@ -145,7 +269,7 @@
     </div>
     <div class="full magnet-section scroll" data-section-name="scroll">
         <h1>Scroll<br>Scroll<br>Scroll<br>Scroll<br>Scroll<br>Scroll<br>Scroll<br>Scroll<br>Scroll<br>Scroll<br>Scroll<br>Scroll<br>Scroll<br>Scroll<br>Scroll<br>Scroll<br>Scroll<br>Scroll<br>Scroll<br>Scroll<br>Scroll<br>Scroll<br></h1>
-    </div>
+    </div> -->
   </div>
   
   
