--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     <div class="magnet-section carac miya">
       <div class="topic">
         <h3>Hipertexto</h3>
-        <h2 class="title8bits">Características</h2>
+        <!-- <h2 class="title8bits">Características</h2> -->
       </div>
       <div class="content full row relative">
         <img src="images/g1.png">
