--- a/index.html
+++ b/index.html
@@ -12,9 +12,6 @@
   		background-color: #000;
   	}
   </style>
-
-  <link href='https://fonts.googleapis.com/css?family=Orbitron:900' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" href="resist/css/style.css">
   
 </head>
 
@@ -58,17 +55,17 @@
         <!-- <h2>Aspectos técnicos</h2> -->
       </div>
       <div class="content full row">
-        <div class="col-md-6">
+        <div class="col-md-6 col-sm-6">
           <div class="input-group">
             <input type="text" class="form-control" value="World Wide Web">
           </div>
         </div>
-        <div class="col-md-6 html-background">
+        <div class="col-md-6 col-sm-6 html-background">
         </div>
         <!-- <div class="col-md-5"><h1>HTML</h1></div>
         <div class="col-md-1"></div> -->
 
-        <div class="col-md-6 fluxo-html">
+        <div class="col-md-6 col-sm-6 fluxo-html">
           <img src="images/1.png">
           <img src="images/2.png">
           <img src="images/3.png">
