--- a/index.html
+++ b/index.html
@@ -193,14 +193,14 @@
       <div class="text-block-vuc">
         <h2>VUC COSIC</h2><br><br>
         <h4>PIONEIRO - 1997</h4><br>
-        <h4><a href="http://www.ljudmila.org/~vuk/">http://www.ljudmila.org/~vuk/</a></h4>
+        <h4><a target="_blank" href="http://www.ljudmila.org/~vuk/">http://www.ljudmila.org/~vuk/</a></h4>
       </div>
     </div>
     <div class="magnet-section five heart pati">
       <div class="text-block">
         <h2>PORPENTINE CHARITY HEARTSCAPE</h2><br><br><br>
         <h4>"Miniskirt World Network: Business Slut Online" 2017
-          <a href="http://slimedaughter.com">http://slimedaughter.com</a>
+          <a target="_blank" href="http://slimedaughter.com">http://slimedaughter.com</a>
         </h4>
       </div>
     </div>
@@ -208,14 +208,14 @@
       <div class="text-block">
         <h2>CELSO REEKS E THIAGO BOUD'HORS</h2><br><br><br>
         <h4>"Lands Beyond" 1997
-          <a href="http://www.distopia.com/LandsBeyond/">http://www.distopia.com/LandsBeyond/</a>
+          <a target="_blank" href="http://www.distopia.com/LandsBeyond/">http://www.distopia.com/LandsBeyond/</a>
         </h4>
       </div>
     </div>
     <div class="full magnet-section five pati title threads">
       <h2>ANDREI THOMAZ<br><br>
         <p>"QUANTAS LINHA SÃO NECESSÁRIAS…." - 2004</p>
-        <a href="http://www.andreithomaz.com">http://www.andreithomaz.com</a>
+        <a target="_blank" href="http://www.andreithomaz.com">http://www.andreithomaz.com</a>
       </h2>
     </div>
 
