--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
     <div class="magnet-section four jonh img-full">
       <img src="images/apple_new.png">
     </div>
-    <div class="magnet-section four jonh img-full">
+    <div class="magnet-section four jonh img-full google">
       <img src="images/google.png">
     </div>
     <div class="magnet-section four jonh img-full">
