--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
     <div class="magnet-section three greg img-full">
       <img src="images/cade.png">
     </div>
-    <div class="magnet-section three greg img-full">
+    <div class="magnet-section three greg img-full google">
       <img src="images/google.png">
     </div>
     <div class="full magnet-section three greg title search-area">
